# EasyImageEdit

./: .gitignore  ComfyUi.bat  ComfyUi_Activate.bat  ComfyUi_NoArgs.bat  ComfyUi_OldGpu.bat  README.md  Update.bat
.github/: copilot-instructions.md
.github/prompts/: rule.md
Download/: AGENTS.md  Default.bat  ZImageTurboComparison.bat
Download/diffusion_models/ZIT/: z-image-turbo_fp8_scaled_e4m3fn_KJ.bat  z-image-turbo_fp8_scaled_e5m2_KJ.bat  z_image_turbo-Q6_K.bat  z_image_turbo_bf16-DF11.bat  z_image_turbo_bf16.bat
Download/text_encoders/: Qwen3-4B-IQ4_NL.bat  qwen3_4b_fp8_scaled.bat  qwen_3_4b.bat
Download/vae/: ae.bat
EasyImageEdit/: EasyImageEditInstaller.bat  SetupEasyImageEdit.bat
EasyImageEdit/ComfyUi/: .gitignore  ActivateComfyUi.bat  ComfyUiVersionLock.bat  ComfyUiVersionUnock.bat  SetupComfyUi.bat  UpdateComfyUiUvLock.bat  pyproject-base.toml  pyproject.toml
EasyImageEdit/ComfyUi/Patch/: Comfyui-Z-Image-Utilities-vl_model.patch
EasyImageEdit/ComfyUi/Workflow/ZIT/: Slow-ComfyUI_ZIT_Template.json  ZIT-Comparison.json  ZIT-TextToImage.json
EasyImageEdit/ComfyUi/res/: rgthree_config.json
EasyImageEdit/ComfyUi/src/: update_config.py
EasyImageEdit/dev/: EasyImageEdit.code-workspace
