[project]
name = "ComfyUi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
	"pip>=25.3,<26",
	"hf-xet>=1.2.0,<2",
	"comfyui-frontend-package==1.33.10",
	"comfyui-workflow-templates==0.7.25",
	"comfyui-embedded-docs==0.3.1",
	"torch>=2.7.1",
	"torchsde>=0.2.6",
	"torchvision>=0.22.1",
	"torchaudio>=2.7.1",
	"numpy>=1.25.0",
	"einops>=0.8.1",
	"transformers>=4.30.0",
	"tokenizers>=0.13.3",
	"sentencepiece>=0.2.1",
	"safetensors>=0.4.2",
	"aiohttp>=3.11.8",
	"yarl>=1.18.0",
	"pyyaml>=6.0.3",
	"pillow>=10.3.0",
	"scipy>=1.15.3",
	"tqdm>=4.67.1",
	"psutil>=7.1.3",
	"alembic>=1.17.2",
	"sqlalchemy>=2.0.44",
	"av>=14.2.0",
	"kornia>=0.7.1",
	"spandrel>=0.4.1",
	"pydantic~=2.0",
	"pydantic-settings~=2.0",
	"dfloat11[cuda12]>=0.5.0",
	"diffusers>=0.35.2",
	"gguf>=0.13.0",
	"protobuf>=6.33.1",
	"color-matcher>=0.6.0",
	"matplotlib>=3.10.7",
	"huggingface-hub>=0.16.0",
	"mss>=10.1.0",
	"opencv-python-headless>=4.11.0.86",
	"gitpython>=3.1.45",
	"pygithub>=2.8.1",
	"matrix-nio>=0.25.2",
	"typer>=0.20.0",
	"rich>=14.2.0",
	"typing-extensions>=4.15.0",
	"toml>=0.10.2",
	"uv>=0.9.15",
	"chardet>=5.2.0",
	"accelerate>=0.20.0",
	"bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
torch291_cu130 = [
	"torch==2.9.1+cu130",
	"torchvision==0.24.1+cu130",
	"torchaudio==2.9.1+cu130",
	"triton-windows==3.5.1.post21", # https://github.com/woct0rdho/triton-windows/releases
	"sageattention==2.2.0+cu130torch2.9.0andhigher.post4", # https://github.com/woct0rdho/SageAttention/releases
]
torch271_cu128 = [
	"torch==2.7.1+cu128",
	"torchvision==0.22.1+cu128",
	"torchaudio==2.7.1+cu128",
	"triton-windows==3.3.1.post21", # https://github.com/woct0rdho/triton-windows/releases
	"sageattention==2.2.0+cu128torch2.7.1.post3", # https://github.com/woct0rdho/SageAttention/releases
]

[tool.uv]
conflicts = [
	[
		{ extra = "torch291_cu130" },
		{ extra = "torch271_cu128" },
	],
]

[[tool.uv.index]]
name = "cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
	{ index = "cu130", extra = "torch291_cu130" },
	{ index = "cu128", extra = "torch271_cu128" },
]
torchvision = [
	{ index = "cu130", extra = "torch291_cu130" },
	{ index = "cu128", extra = "torch271_cu128" },
]
torchaudio = [
	{ index = "cu130", extra = "torch291_cu130" },
	{ index = "cu128", extra = "torch271_cu128" },
]
sageattention = [
	{ url = "https://github.com/woct0rdho/SageAttention/releases/download/v2.2.0-windows.post4/sageattention-2.2.0+cu130torch2.9.0andhigher.post4-cp39-abi3-win_amd64.whl", extra = "torch291_cu130" },
	{ url = "https://github.com/woct0rdho/SageAttention/releases/download/v2.2.0-windows.post3/sageattention-2.2.0+cu128torch2.7.1.post3-cp39-abi3-win_amd64.whl", extra = "torch271_cu128" },
]
